# arc-agi-3_Vision-CLv1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: compete.py  download_games.py  inspect.py  train.py
src/vision_arc_agi/: __init__.py  agent.py  arc_runner.py  cli.py  compete.py  grid.py  memory.py  prompts.py  sandbox.py  state.py  tools.py  train.py  vision.py
tests/: conftest.py  test_grid.py  test_memory.py  test_sandbox.py  test_smoke_vision.py  test_state.py  test_tools.py  test_vision_client.py
