[project]
name = "vispark-vision-cl-arc-agi-3"
version = "0.1.0"
description = "Vispark Vision (Large) with Continual Learning + agentic harness for ARC-AGI-3"
authors = [{ name = "Vansh", email = "vanshkvanshk0@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.8",
    "httpx>=0.28.1",
    "numpy>=2.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
vision-arc-train = "vision_arc_agi.cli:train_main"
vision-arc-compete = "vision_arc_agi.cli:compete_main"
vision-arc-inspect = "vision_arc_agi.cli:inspect_main"
vision-arc-download = "vision_arc_agi.cli:download_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_arc_agi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
